--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -137,7 +137,7 @@
 				</li>
 
 			</ul>
-		</div> 
+		</div>
 
     <script type="text/javascript">
 			$.ajax({
@@ -169,7 +169,7 @@
                 console.log(data);
             },
             error:function(data){
-              alert(data);
+              alert(data['error']);
             }
       });
       // getconfpath
