完成了linechart的动态速度计算，effi页面逻辑基本完成

--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -246,7 +246,8 @@
 									// console.log(a['labels']);
 									a['labels'].unshift(time);
 									// console.log(a['labels']);
-									a['data'].unshift(data['network_data']);
+									console.log("a[data]:",a['data'][0]);
+									a['data'].unshift(data['network_data'] - a['data'][0]);
 									// console.log(a['data']);
 									// console.log("a[data] and a[labels] is ", a['data'],a['labels']);
 									// console.log(a);
