--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -154,7 +154,7 @@
             }
       });
       $.ajax({
-            url: '/api/load_config/',
+            url: '/api/load_log_text/',
             data: {},
             type: 'GET',
             contentType: 'application/json;charset=utf-8',
