修复了性能管理页面的小bug，完成了effi和conf的前后交互

--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -240,9 +240,15 @@
 									var time = h + ":" + m + ":" + s;
 									// NOTE: read data List
 
-
+									if(window.sessionStorage['lineData'] == null){
+										var ori = {
+											labels:[time],
+											data:[0]
+										}
+										window.sessionStorage.setItem("lineData",JSON.stringify(ori));
+									}
 									var a = JSON.parse(window.sessionStorage['lineData']);
-									// console.log("a is :", a);
+
 									// console.log(a['labels']);
 									a['labels'].unshift(time);
 									// console.log(a['labels']);
