--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -4,6 +4,8 @@
 <meta name="description" content="" />
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
+<!-- load test file Qunit -->
+<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.9.2.css">
 <!-- Load main style sheets -->
 <link rel="stylesheet" href="../static/styles.css" />
 <link href="../static/semantic-ui/semantic.min.css" rel="stylesheet" type="text/css">
@@ -21,7 +23,7 @@
 <script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../static/js/background-image.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<!-- <script src="../static/js/conf.js"></script> -->
+<script src="https://code.jquery.com/qunit/qunit-2.9.2.js"></script>
 {% block head %}{% endblock %}
 <!-- Nivo Slider -->
     <script type="text/javascript">
