修改了测试需求文档的测试用例内容，完成了测试报告（配置管理和日志管理）

--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -154,7 +154,7 @@
             }
       });
       $.ajax({
-            url: '/api/load_log_text/',
+            url: '/api/load_config/',
             data: {},
             type: 'GET',
             contentType: 'application/json;charset=utf-8',
