修复首页logo形状的问题

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -66,7 +66,7 @@
 	<!-- Side view contains the logo and header section -->
 	<div class="sideview">
 		<div class="logo">
-			<a href="/"><img src="../static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
+			<a href="/"><img src="../static/img/layout/apachelogo.jpg" width="250" alt="Logo" /></a>
 		</div><!-- end logo -->
 		<!-- Start menu -->
 		<div class="menu">
