--- a/demo/templates/conf.html
+++ b/demo/templates/conf.html
@@ -30,8 +30,7 @@
 				<h2>修改配置文件路径</h2>
         <div class="ui fluid action input">
             <input type="text" placeholder="默认路径" id="confPathText">
-                <button class="ui button"><i class="large folder open outline icon"></i></button>
-                        &nbsp;
+
                 <button class="ui button" id='updateConfPathButton' onclick="updateConfPath()">修改</button>
                 </div>
 				</li>
@@ -150,7 +149,7 @@
                 $('#confPathLabel').text(data['path']);
             },
             error:function(data){
-              alert(data);
+              alert(data.responseJSON['error']);
             }
       });
       $.ajax({
@@ -169,7 +168,7 @@
                 console.log(data);
             },
             error:function(data){
-              alert(data['error']);
+              alert(data.responseJSON['error']);
             }
       });
       // getconfpath
@@ -186,7 +185,7 @@
                    console.log("get successfully1");
                },
                error:function(data){
-                 alert("data")
+                 alert(data.responseJSON['error']);
                }
            });
       });
@@ -205,7 +204,8 @@
             console.log(res);
           },
           error:function(data){
-            alert(data);
+            console.log(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -232,12 +232,13 @@
                       console.log(data);
                   },
                   error:function(data){
-                    alert(data);
+                    alert(data.responseJSON['error']);
+
                   }
             });
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -254,7 +255,7 @@
             console.log("update conf info 2 successfully!");
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -271,7 +272,7 @@
             console.log("update conf info 3 successfully!");
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -288,7 +289,7 @@
             console.log("update conf info 4 successfully!");
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -305,7 +306,7 @@
             console.log("update conf info 5 successfully!");
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
@@ -322,7 +323,7 @@
             console.log("update conf info 6 successfully!");
           },
           error:function(data){
-            alert(data);
+            alert(data.responseJSON['error']);
           }
         });
       });
