--- a/demo/templates/module.html
+++ b/demo/templates/module.html
@@ -24,7 +24,7 @@
                     console.log(data);
                 },
                 error: function (data) {
-                    console.log(data);
+                    alert(data.responseJSON['error'])
                 }
             })
             window.location.reload();
@@ -45,7 +45,7 @@
                     console.log(data);
                 },
                 error: function (data) {
-                    console.log(data);
+                    alert(data.responseJSON['error'])
                 }
             })
             window.location.reload();
@@ -65,7 +65,7 @@
                     console.log(data);
                 },
                 error: function (data) {
-                    console.log(data);
+                    alert(data.responseJSON['error'])
                 }
             })
             window.location.reload();
