删除了应用介绍页面，感觉每个卵用，干脆不写了，口亨╭(╯^╰)╮

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -81,12 +81,12 @@
 					</ul>
 				</li>
 				<li><a href="/about">团队介绍<span class="desc">know about us</span></a></li>
-				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">introduction of our application</span></a>
+				<!-- <li class="dropdown"><a href="/introduction">应用介绍<span class="desc">introduction of our application</span></a>
 					<ul>
 						<li><a href="/introduction/usecase">用途介绍</a></li>
 						<li><a href="/introduction/function">功能介绍</a></li>
 					</ul>
-				</li>
+				</li> -->
 				<li><a href="/contact" class="last">联系我们<span class="desc">Get in touch</span></a></li>
 			</ul>
 		</div><!-- end menu -->
