联系我们页面V1.0

--- a/demo/templates/contact.html
+++ b/demo/templates/contact.html
@@ -30,6 +30,7 @@
 				<li>Tel: <span>010-12345678</span></li>
 				<li>Phone: <span>12345678910</span></li>
 				<li>Email: <span><a href="mailto:info@example.com">jk_0816@buaa.edu.cn</a></span></li>
+                <li>GitHub: <span><a href="https://github.com/buaa0110/ApacheAssistant">ApacheAssistant</a></span></li>
 				<li>Address<br /> <span>北京市<br />海淀区<br />学院路37号<br />北京航空航天大学</span></li>
 			</ul>
 		</div>
